tests/errors/test_92.x
// No such trait to implement

struct Foo -> {
	val: i64
}

impl What for Foo -> {

}

fn main() -> void {}
